<resources>
    <string name="app_name">School Dashboard Staff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school_logo_text">School Logo</string>
    <string name="tvWelcomeBackText">Welcome Back</string>
    <string name="tvSubtitleText">Sign in to your school dashboard</string>
    <string name="hintUsername">Username</string>
    <string name="cbRememberMeText">Remember me</string>
    <string name="btnLoginText">LOGIN</string>
    <string name="tvForgotPasswordText">Forgot Password?</string>
    <string name="tvFooterText">School Dashboard © 2025</string>
    <string name="hintPassword">Password</string>
    <string name="tvSchoolsFragmentText">Schools Fragment</string>
    <string name="tvOverviewFragmentText">Overview Fragment</string>
    <string name="tvSettingsFragmentText">Settings Fragment</string>
    <string name="tvDashboardTitleSupaText">Super Admin Dashboard</string>
    <string name="tvWelcomeAdminSupaText">Welcome back, Administrator</string>
    <string name="default_school_name">Greenfield High School</string>
    <string name="default_school_address">123 Maple Street, Cityville</string>
    <string name="tvTeachersCountText">Teachers</string>
    <string name="tvTeacherCountNum">0</string>
    <string name="tvStudentsCountText">Students</string>
    <string name="tvClassesNum">0</string>
    <string name="tvClassesCountText">Classes</string>
    <string name="tvWelcomeAESText">Register Your School</string>
    <string name="tvSubtitleAESText">Set up your school profile and admin account</string>
    <string name="school_information">School Information</string>
    <string name="school_name">School Name</string>
    <string name="school_location">School Location</string>
    <string name="grade_range">Grade Range</string>
    <string name="starting_grade">Starting Grade</string>
    <string name="_1">1</string>
    <string name="ending_grade">Ending Grade</string>
    <string name="_12">12</string>
    <string name="school_administrator">School Administrator</string>
    <string name="add_another">+ Add Another</string>
    <string name="adminNumberText">Admin #1</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_admin">Register Admin</string>
    <string name="added_administrators">Added Administrators:</string>
    <string name="register_school">Register School</string>
    <string name="setting_up_your_school_management_system">Setting up your school management system</string>
    <string name="admin_name_text">Admin name :</string>
    <string name="tvGradesText">Grades :</string>
    <string name="list_of_schools">List of schools</string>
    <string name="students_23_30">Students: 23/30</string>
    <string name="subjects_4_6">Subjects: 4/6</string>
    <string name="subjects_assigned_math_science">Subjects Assigned: Math, Science</string>
    <string name="class_teacher_mr_john_doe">Class Teacher: Mr. John Doe</string>
    <string name="unstable">🔴 Unstable</string>
    <string name="grade_5_section_a">Grade 5 - Section A</string>
    <string name="populate_missing_grades_underlined"><![CDATA[<u>Populate Missing Grades</u>]]></string>
    <string name="create_teacher">Create Teacher</string>
    <string name="add_teacher_icon">Add Teacher Icon</string>
    <string name="create">CREATE</string>
    <string name="periods">Periods:</string>
    <string name="clear_search">Clear Search</string>
    <string name="search">Search</string>
    <string name="search_icon">Search Icon</string>
    <string name="assign">Assign</string>
    <string name="create_subject">Create Subject</string>
    <string name="assign_subjec">Assign Subjects</string>
    <string name="max_periods">Max Periods</string>
    <string name="assign_subject">Assign Subject</string>
    <string name="assign_subjects">Assign Subjects</string>
    <string name="john_doe">John Doe</string>
    <string name="periods_5">Periods: 5</string>
    <string name="mr_john_doe">Mr. John Doe</string>
    <string name="mathematics">Mathematics</string>

</resources>