<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:elevation="6dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/red_background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/primary_red" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/tvSchoolName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_school_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Address -->
                <TextView
                    android:id="@+id/tvSchoolLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/default_school_address"
                    android:textColor="#272727"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvGrades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/tvGradesText"
                    android:textColor="#272727"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvAdminName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/admin_name_text"
                    android:textColor="#272727"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <!-- This empty view takes up space and pushes buttons to the right -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1" />

                <!-- First Button -->
                <ImageButton
                    android:id="@+id/btnAddAdmin"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_add_admin"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Add admin"
                    android:padding="8dp"
                    android:layout_marginEnd="8dp" />


                <ImageButton
                    android:id="@+id/btnEdit"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_edit"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Edit"
                    android:padding="8dp"
                    android:layout_marginEnd="8dp" />

                <ImageButton
                    android:id="@+id/btnDelete"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_delete"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Delete"
                    android:padding="8dp"
                    app:tint="@color/primary_red_dark" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/primary_red" />


        </LinearLayout>





    </androidx.cardview.widget.CardView>

  
</layout>